# flexar

./: Cargo.toml
assets/plugins/vk/: config.toml  plugin.lua
src/: about.rs  config.rs  dialogs.rs  main.rs  plugin.rs  plugin_ui.rs
