[package]
name = "flexar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.16.0"
toml = "0.5.8"
dirs = "4.0.0"
serde = "1.0.132"
serde_derive = "1.0.132"
include_dir = "0.7.2"
mlua = { version = "0.7.2", features = ["lua54"] }

[profile.release]
opt-level = 2
